[project]
name = "orionfinance-app"
version = "0.1.0"
description = "Interactive Dash frontend for Orion Finance protocol simulator"
requires-python = ">=3.12"
readme = "README.md"
authors = [
    { name = "Matteo Manzi" },
]

dependencies = [
    "dash>=3.0.0,<4.0.0",
    "plotly>=6.0.0,<7.0.0",
    "gunicorn>=23.0.0,<24.0.0"
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.1.0,<4.2.0",
    "ruff>=0.11.0, < 1.0.0",
    "pydocstyle>=6.3.0,<6.4.0",
]
