[project]
name = "orionfinance-app"
version = "0.1.0"
description = "Interactive Dash frontend for Orion Finance protocol simulator"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "Matteo Manzi" },
]

dependencies = [
    "dash>=3.0.0,<4.0.0",
    "dash-cytoscape<=1.0.0,<2.0.0",
    "plotly>=6.0.0,<7.0.0",
    "gunicorn>=23.0.0,<24.0.0",
    "networkx>=3.0.0,<4.0.0",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.2.0,<3.0.0",
    "cryptography>=42.0.0,<43.0.0"
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.1.0,<4.2.0",
    "ruff>=0.11.0, < 1.0.0",
    "pydocstyle>=6.3.0,<6.4.0",
]
